# rust-pitch-detect

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: ivar.rs  main.rs  mod.rs  mvar.rs  note.rs
