[package]

name = "pitch-detect"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
]

[features]
default = []

use-gnuplot = ["gnuplot"]

[[bin]]
name = "main"
path = "src/mod.rs"

[dependencies]
clippy = "*"
env_logger= "*"
log = "*"
thread-scoped = "*"
time = "*"
GSL = "*"

[dependencies.gnuplot]
version = "*"
optional = true

[dependencies.clap]
git = "https://github.com/kbknapp/clap-rs"

[dependencies.portaudio]
git = "https://github.com/jeremyletang/rust-portaudio"
